# setting-manager

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  example.py  pyproject.toml
.github/workflows/: changelog.yml  release.yml
core/: manager.py
docs/: usage.md
examples/: fastapi_example.py
setting_manager/: manager.py
setting_manager/fastapi/: route.py
setting_manager/fastapi/templates/: settings.html
src/setting_manager/: __init__.py  manager.py
src/setting_manager/fastapi/: route.py
src/setting_manager/fastapi/templates/: grouped_settings.html
tests/: conftest.py  test_permissions.py
