[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setting-manager"
version = "0.1.0"
description = "A flexible settings management library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Konstantin Zhmurko", email = "prog@zhmyrko.ru"}
]
keywords = ["library", "setting", "feature flag"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
mongo = ["motor"]
fastapi = ["fastapi"]

dev = [
    "fastapi[standard]",
    "pre-commit",
    "pytest",
    "ruff",
    "ty"
]

[project.urls]
"Homepage" = "https://github.com/Frojen/setting-manager"

[tool.hatch.version]
path = "src/setting_manager/__init__.py"

[tool.semantic_release]
version_variable = "src/setting_manager/__init__.py:__version__"
commit_version_number = true
tag_commit = true
upload_to_pypi = false
upload_to_release = true
major_on_zero = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^Merge", "^Revert", "^fixup!", "^squash!"
]

# --- Инструменты для разработки ---

[tool.hatch.scripts]
# Запуск dev-сервера для example.py
dev = "fastapi dev example:app"


[tool.ruff]
line-length = 120
target-version = 'py311'
output-format = "concise"
extend-exclude = ["venv", ".venv"]


[tool.ruff.lint]
select = ["F", "E", "W", "T20", "PT", "I", "C90", "UP", "S", "N", "DTZ"]
unfixable = ["F401"]
ignore = []


[tool.ty.terminal]
output-format = "concise"


[tool.ty.environment]
python-version = "3.11"


[tool.basedpyright]
typeCheckingMode = "standard"